[tool.poetry]
name = "yufuquant"
version = "0.1.0"
description = ""
authors = ["zmrenwu <zmrenwu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
django = "^3.1.2"
django-model-utils = "^4.0.0"
djangorestframework = "^3.12.1"
django-cryptography = "^1.0"
django-extensions = "^3.0.1"
channels = "^2.4.0"
channels-redis = "^3.0.1"
django-cors-headers = "^3.4.0"
django-filter = "^2.3.0"
uvicorn = "^0.11.5"
django-environ = "^0.4.5"
django-imagekit = "^4.0.2"
pillow = "^7.2.0"
gunicorn = "^20.0.4"
sentry-sdk = "^0.15.1"
factory-boy = "^2.12.0"
jsonfield = "^3.1.0"
django-admin-sortable2 = "^0.7.6"
drf-extensions = "^0.6.0"
djangorestframework-api-key = "^2.0.0"
drf-yasg = "^1.17.1"
asgiref = "^3.2.10"
daphne = "^2.5.0" # required by django-channels though we use uvicorn in production
psycopg2-binary = "^2.8.6"
hiredis = "^1.1.0"
django-redis = "^4.12.1"
drf-spectacular = "^0.10.0"
argon2-cffi = "^20.1.0"
django-celery-beat = "^2.1.0"
django-celery-results = "^1.2.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
django-debug-toolbar = "^2.2"
pytest = "^6.1.1"
pytest-django = "^4.0.0"
pytest-cov = "^2.10.0"
freezegun = "^0.3.15"
django-silk = "^4.0.1"
django-test-plus = "^1.4.0"
pytest-sugar = "^0.9.3"
django-stubs = "^1.6.0"
djangorestframework-stubs = "^1.2.0"
isort = "^5.4.2"
flake8 = "^3.8.3"
pytest-asyncio = "^0.14.0"
black = "^20.8b1"
flake8-isort = "^4.0.0"
mkdocs-material = "^5.5.12"

[tool.pytest.ini_options]
minversion = "6.0"
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = "tests.py test_*.py"
norecursedirs = "frontend"
addopts = "--reuse-db --cov=yufuquant --cov-report html"

[tool.isort]
profile = "black"
skip = ["migrations"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

